# py-playwright

./: Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
configs/: __init__.py  config.yaml  pytest_cli.py
fixtures/: __init__.py  browser_fixtures.py  data_fixtures.py
pages/: __init__.py  base_page.py  home_page.py  login_page.py  todo_page.py
plugins/: __init__.py  artifacts_plugin.py  logging_plugin.py
tests/: test_e2e.py  test_mobile.py  test_regression.py  test_smoke.py  test_todo_e2e.py  test_todo_regression.py  test_todo_smoke.py
tests/data/: todos.json  users.json
tools/: __init__.py  helpers.py  test_data_service.py
